Removed origin var from url

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,5 +1,5 @@
 html
-	script(src="#{origin}/socket.io/socket.io.js")
+	script(src="/socket.io/socket.io.js")
 	script(src="js/jquery.js")
 	script(src="js/underscore.js")
 	script(src="js/backbone.js")
