repl start and view change for socket path

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,8 +1,8 @@
 html
-	script(src="http://localhost:#{port}/socket.io/socket.io.js")
+	script(src="/socket.io/socket.io.js")
 	script(src="js/jquery.js")
 	script(src="js/underscore.js")
-	script(src="js/backbone.js")
+	script(src="js/Backbone.js")
 	link(rel="stylesheet",href="css/bootstrap.css",type='text/css')
 	script(src="js/bootstrap.js")
 
